# LFU_cache

./: CMakeLists.txt  readme.md
benchmark/: 1000_bench.txt
include/: LFU_cache.hpp  ideal_cache.hpp
src/: CMakeLists.txt  LFU_cache.cpp  ideal_cache.cpp  main.cpp
test/: tester.py  tests.txt
test/functional/: LFU_tester.py  LFU_tests.txt  ideal_tester.py  ideal_tests.txt
test/unit/: CMakeLists.txt  LFU_test.cpp  ideal_test.cpp
